--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "icon" href = "https://img.icons8.com/external-bearicons-outline-color-bearicons/64/external-gradient-graphic-design-bearicons-outline-color-bearicons.png" type = "image/x-icon">
     <title>Gradient Background</title>
     <link rel="stylesheet" href="style.css">
 </head>
